# circular_buffer

./: CMakeLists.txt
example/: CMakeLists.txt  bounded_buffer_comparison.cpp  circular_buffer_bound_example.cpp  circular_buffer_iter_example.cpp
include/boost/: circular_buffer.hpp  circular_buffer_fwd.hpp
include/boost/circular_buffer/: allocators.hpp  base.hpp  debug.hpp  details.hpp  ext.hpp  space_optimized.hpp
test/: CMakeLists.txt  base_test.cpp  bounded_buffer_comparison.cpp  common.ipp  constant_erase_test.cpp  soft_iterator_invalidation.cpp  space_optimized_test.cpp  test.hpp
